--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vuepress build src"
   },
   "devDependencies": {
-    "vuepress": "^1.4.0"
+    "@vuepress/plugin-blog": "^1.9.2",
+    "vuepress": "^1.5.2"
   }
 }
