--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "devDependencies": {
     "@vuepress/plugin-blog": "^1.9.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
     "vuepress": "^1.5.2"
+  },
+  "dependencies": {
+    "bulma": "^0.9.0"
   }
 }
