--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "build": "vuepress build src"
   },
   "devDependencies": {
-    "vuepress": "^1.4.0"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
+    "vuepress": "^1.5.2"
+  },
+  "dependencies": {
+    "bulma": "^0.9.0"
   }
 }
